# parabellum

./: .gitignore  .readthedocs.yaml  CITATION.cff  README.md  conf.yaml  justfile  ludens.ipynb  ludens.py  main.py  multirun.yaml  pyproject.toml
.github/workflows/: publish.yaml
conf/: config.yaml
docs/: conf.py  index.rst  installation.rst  slides.typ
docs/_build/: .buildinfo  genindex.html  index.html  instalation.html  installation.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  instalation.doctree  installation.doctree
parabellum/: __init__.py  aid.py  env.py  geo.py  gun.py  map.py  model.py  pcg.py  run.py  terrain_db.py  tim.py  tps.py  types.py  utils.py  vis.py
parabellum/.ipynb_checkpoints/: __init__-checkpoint.py  env-checkpoint.py  vis-checkpoint.py
purejaxrl/purejaxrl/: dqn.py  ppo.py  ppo_continuous_action.py  ppo_rnn.py
test/: geo_test.py  map_test.py
tests/: test_map.py
