[project]
name = "parabellum"
version = "0.0.111"
description = "Parabellum environment for parallel warfare simulation"
authors = [{ name = "Noah Syrkis", email = "desk@syrkis.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "tqdm>=4.66.4,<5",
    "geopy>=2.4.1,<3",
    "pandas>=2.2.2,<3",
    "contextily>=1.6.0,<2",
    "einops>=0.8.0,<0.9",
    "cartopy>=0.23.0,<0.24",
    "cachier>=3.1.2,<4",
    "wandb>=0.19.7,<0.20",
    "omegaconf>=2.3.0,<3",
    "osmnx>=2.0.4",
    "jaxkd==0.1.0",
    "chex>=0.1.82,<0.1.89",
    "jax>=0.6.2; sys_platform != 'linux'",
    "jax[cuda12]>=0.6.2; sys_platform == 'linux'",
]

[dependency-groups]
dev = ["esch"]

[tool.uv.sources]
esch = { path = "../esch" }

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 120
