[project]
name = "parabellum"
version = "0.0.145"
description = "Parabellum environment for parallel warfare simulation"
authors = [{ name = "Noah Syrkis", email = "desk@syrkis.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "tqdm>=4.66.4,<5",
    "geopy>=2.4.1,<3",
    "einops>=0.8.0,<0.9",
    "cartopy>=0.23.0,<0.24",
    "cachier>=3.1.2,<4",
    "chex>=0.1.82,<0.1.89",
    "jaxtyping>=0.3.2",
    "rasterio>=1.4.3",
    "osmpythontools>=0.3.6",
    "osmnx>=2.0.5",
    "mlxp>=1.0.4",
    "jax<=0.5",
    "contextily>=1.6.2",
    "jaxkd>=0.1.2",
]

[dependency-groups]
dev = ["esch"]

[tool.uv.sources]
esch = { path = "../esch" }

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 128
